--- a/trunk/gaspar8/src/main/java/it/mate/econyx/client/css/bundle-custom.css
+++ b/trunk/gaspar8/src/main/java/it/mate/econyx/client/css/bundle-custom.css
@@ -21,7 +21,7 @@ a, a:active, a:focus {
 }
 
 .mwt-BoxContainer {
-  padding: 2px 10px 0 0;
+  padding: 2px 10px 20px 0;
 }
 
 .mwt-BoxContainerTitle {
